--- a/Mpp_Project/res/layout/layout_loan_item.xml
+++ b/Mpp_Project/res/layout/layout_loan_item.xml
@@ -1,85 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/loan_card_layout"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-    <LinearLayout
-                  android:id="@+id/loan_main_info"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:orientation="horizontal"
-                  android:layout_marginLeft="10dp"
-                  android:layout_marginRight="10dp">
-        <ImageView
-                android:id="@+id/picYou"
-                android:longClickable="false"
-                android:layout_marginRight="5dp"
-                android:layout_gravity="center_vertical"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_row="0"
-                android:layout_column="0"/>
-        <ImageView
-                android:id="@+id/picArrow"
-                android:longClickable="false"
-                android:layout_gravity="center_vertical"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_row="0"
-                android:layout_column="0"/>
-        <ImageView
-            android:id="@+id/picUser"
-            android:longClickable="false"
-            android:layout_marginRight="10dp"
-            android:layout_gravity="center_vertical"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_row="0"
-            android:layout_column="0"
-            android:layout_marginLeft="5dp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/amountItem"
-                android:layout_gravity="center_vertical"
-                android:textColor="#979593"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@+id/isPaid"
-                android:text="10.00 €"
-                android:layout_row="0"
-                android:layout_column="3"/>
+	android:id="@+id/loan_card_layout"
+	android:layout_width="fill_parent"
+	android:layout_height="wrap_content"
+	android:orientation="vertical" >
 
-        <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Paid"
-                android:id="@+id/isPaid"
-                android:layout_gravity="center_vertical"
-                android:textSize="10dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_row="0"
-                android:layout_column="4"/>
+	<LinearLayout
+		android:id="@+id/loan_main_info"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
+		android:orientation="horizontal" >
 
-        </LinearLayout>
-        <LinearLayout
-                      android:id="@+id/loan_comments"
-                      android:layout_width="match_parent"
-                      android:layout_height="match_parent"
-                      android:orientation="horizontal"
-                      android:layout_marginLeft="10dp">
-            <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:id="@+id/infoItem"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_toRightOf="@+id/picUser"
-                    android:text="Some information"
-                    android:layout_marginRight="10dp"/>
-            </LinearLayout>
+		<ImageView
+			android:id="@+id/picYou"
+			android:layout_width="50dp"
+			android:layout_height="50dp"
+			android:layout_column="0"
+			android:layout_gravity="center_vertical"
+			android:layout_marginRight="5dp"
+			android:layout_row="0"
+			android:longClickable="false" />
+
+		<ImageView
+			android:id="@+id/picArrow"
+			android:layout_width="50dp"
+			android:layout_height="50dp"
+			android:layout_column="0"
+			android:layout_gravity="center_vertical"
+			android:layout_row="0"
+			android:longClickable="false" />
+
+		<ImageView
+			android:id="@+id/picUser"
+			android:layout_width="50dp"
+			android:layout_height="50dp"
+			android:layout_column="0"
+			android:layout_gravity="center_vertical"
+			android:layout_marginLeft="5dp"
+			android:layout_marginRight="10dp"
+			android:layout_row="0"
+			android:longClickable="false" />
+
+		<TextView
+			android:id="@+id/amountItem"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_centerVertical="true"
+			android:layout_column="3"
+			android:layout_gravity="center_vertical"
+			android:layout_row="0"
+			android:layout_toLeftOf="@+id/isPaid"
+			android:text="10.00 €"
+			android:textAppearance="?android:attr/textAppearanceMedium"
+			android:textColor="#979593" />
+
+		<CheckBox
+			android:id="@+id/isPaid"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentEnd="true"
+			android:layout_alignParentRight="true"
+			android:layout_centerVertical="true"
+			android:layout_column="4"
+			android:layout_gravity="center_vertical"
+			android:layout_row="0"
+			android:text="Paid"
+			android:textSize="10dp" />
+	</LinearLayout>
+
+	<LinearLayout
+		android:id="@+id/loan_comments"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginLeft="10dp"
+		android:orientation="horizontal" >
+
+		<TextView
+			android:id="@+id/infoItem"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center_horizontal"
+			android:layout_marginRight="10dp"
+			android:layout_toRightOf="@+id/picUser"
+			android:text="Some information"
+			android:textAppearance="?android:attr/textAppearanceSmall" />
+	</LinearLayout>
+
 </LinearLayout>
