--- a/Mpp_Project/res/layout/fragment_section_loans.xml
+++ b/Mpp_Project/res/layout/fragment_section_loans.xml
@@ -8,13 +8,19 @@
         android:background="#f0f0f0"
         android:id="@+id/mainLayout">
 
-    <Button
-        android:id="@+id/refreshButton"
-        style="@color/blue"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Refresh" />
+	<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:textAppearance="?android:attr/textAppearanceLarge"
+			android:text="Last Loans :"
+			android:id="@+id/titleLoan"
+			android:layout_margin="10dp"
+			android:textStyle="bold"/>
 
+	<android.support.v4.widget.SwipeRefreshLayout
+			android:id="@+id/swipe_container"
+			android:layout_width="match_parent"
+			android:layout_height="match_parent" >
     <it.gmariotti.cardslib.library.view.CardListView
             xmlns:card="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
@@ -23,5 +29,5 @@
             card:list_card_layout_resourceID="@layout/layout_loan_card">
 
     </it.gmariotti.cardslib.library.view.CardListView>
-
+</android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
