--- a/Mpp_Project/res/layout/layout_item_news.xml
+++ b/Mpp_Project/res/layout/layout_item_news.xml
@@ -26,7 +26,9 @@
 		android:layout_below="@+id/date"
 		android:layout_alignParentRight="true"
 		android:layout_alignParentEnd="true"
-		android:textSize="14dp"/>
+		android:textSize="18dp"
+		android:layout_marginRight="10dp"
+		android:textIsSelectable="true"/>
 
 	<TextView
 		android:id="@+id/date"
@@ -36,6 +38,8 @@
 		android:layout_alignTop="@+id/photo"
 		android:layout_marginRight="5dp"
 		android:text=""
-		android:textAppearance="?android:attr/textAppearanceSmall" />
+		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:textColor="#bbbbbf"
+		android:textSize="12dp"/>
 
 </RelativeLayout>
